[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["StanShock"]

[project]
name = "StanShock"
authors = [
    {name = "Kevin Grogan", email = "kevin.p.grogan@gmail.com"},
]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "Cantera>=2.6.0",
    "matplotlib",
    "numba",
    "numpy",
    "scipy"
]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "StanShock.__version__"}
